# Kalman-and-Bayesian-Filters-in-Python

./: 01-g-h-filter.ipynb  02-Discrete-Bayes.ipynb  03-Gaussians.ipynb  04-One-Dimensional-Kalman-Filters.ipynb  05-Multivariate-Gaussians.ipynb  06-Multivariate-Kalman-Filters.ipynb  07-Kalman-Filter-Math.ipynb  08-Designing-Kalman-Filters copy.ipynb  08-Designing-Kalman-Filters.ipynb  09-Nonlinear-Filtering.ipynb  10-Unscented-Kalman-Filter.ipynb  11-Extended-Kalman-Filters.ipynb  12-Particle-Filters.ipynb  13-Smoothing.ipynb  14-Adaptive-Filtering.ipynb  pyproject.toml
Supporting_Notebooks/: Computing_and_plotting_PDFs.ipynb
kf_book/: adaptive_internal.py  nonlinear_plots.py  pf_internal.py
