[project]
name = "kalman-and-bayesian-filters-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filterpy>=1.4.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "scipy>=1.15.1",
    "setuptools>=75.8.0",
]
